build-head.txt

> eclip-frontend@0.2.0 build
> next build

  ▲ Next.js 14.2.0
  - Environments: .env.local

   Linting and checking validity of types ...
   Creating an optimized production build ...
Failed to compile.

./src/styles/globals.css.webpack[javascript/auto]!=!./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[1]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[2]!./src/styles/globals.css
/workspaces/eclip/postcss.config.js:6
};\n
  ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.<anonymous> (node:internal/modules/cjs/loader:1463:12)
    at mod.require (/workspaces/eclip/node_modules/next/dist/server/require-hook.js:65:28)
    at require (node:internal/modules/helpers:147:16)

Import trace for requested module:
./src/styles/globals.css.webpack[javascript/auto]!=!./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[1]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[2]!./src/styles/globals.css
./src/styles/globals.css

./src/styles/globals.css
/workspaces/eclip/postcss.config.js:6
};\n
  ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.<anonymous> (node:internal/modules/cjs/loader:1463:12)
    at mod.require (/workspaces/eclip/node_modules/next/dist/server/require-hook.js:65:28)
    at require (node:internal/modules/helpers:147:16)
    at tryRunOrWebpackError (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:312989)
    at __webpack_require_module__ (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:131165)
    at __nested_webpack_require_153728__ (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:130607)
    at /workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:131454
    at symbolIterator (/workspaces/eclip/node_modules/next/dist/compiled/neo-async/async.js:1:14444)
    at done (/workspaces/eclip/node_modules/next/dist/compiled/neo-async/async.js:1:14824)
    at Hook.eval [as callAsync] (eval at create (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:13:28858), <anonymous>:15:1)
    at Hook.CALL_ASYNC_DELEGATE [as _callAsync] (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:13:26012)
    at /workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:130328
    at symbolIterator (/workspaces/eclip/node_modules/next/dist/compiled/neo-async/async.js:1:14402)
-- inner error --
/workspaces/eclip/postcss.config.js:6
};\n
  ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.<anonymous> (node:internal/modules/cjs/loader:1463:12)
    at mod.require (/workspaces/eclip/node_modules/next/dist/server/require-hook.js:65:28)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/workspaces/eclip/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[1]!/workspaces/eclip/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[2]!/workspaces/eclip/src/styles/globals.css:1:7)
    at /workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:922493
    at Hook.eval [as call] (eval at create (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:13:28636), <anonymous>:7:1)
    at Hook.CALL_DELEGATE [as _call] (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:13:25906)
    at /workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:131198
    at tryRunOrWebpackError (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:312943)
    at __webpack_require_module__ (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:131165)
    at __nested_webpack_require_153728__ (/workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:130607)
    at /workspaces/eclip/node_modules/next/dist/compiled/webpack/bundle5.js:28:131454
    at symbolIterator (/workspaces/eclip/node_modules/next/dist/compiled/neo-async/async.js:1:14444)

Generated code for /workspaces/eclip/node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[1]!/workspaces/eclip/node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[6].oneOf[14].use[2]!/workspaces/eclip/src/styles/globals.css

Import trace for requested module:
./src/styles/globals.css


> Build failed because of webpack errors
